--- a/mysite.css
+++ b/mysite.css
@@ -3,14 +3,14 @@
     display: inline-block;
 }
 
-.button > div {
+.button div {
 width: 160;
   height: 59;
   background-image: linear-gradient(#626262, #000);
   border-radius: 9px;
 }
 
-.button > div:hover {
+.button div:hover {
 background-image: linear-gradient(#b0b0b0, #353535);
 cursor: pointer;
 }
